examples/misc/error/execution/eof.bfr
let main = $

$build {x}

, x